add component Login

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/polyfill": "^7.12.1",
     "@modules/image-gallery": "file:./modules/image-gallery/",
+    "@modules/login": "file:./modules/login/",
+    "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
