--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "@modules/image-gallery": "file:./modules/image-gallery/",
     "@modules/login": "file:./modules/login/",
+    "@modules/maps": "file:./modules/maps/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -30,6 +31,9 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-google-places-autocomplete": "2.4.1",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "1.8.0",
     "react-native-paper": "^5.9.1",
     "react-native-radio-buttons-group": "^2.3.2",
     "react-native-reanimated": "~2.14.0",
