add component Onboarding module

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@modules/image-gallery": "file:./modules/image-gallery/",
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
+    "@modules/onboarding": "file:./modules/onboarding/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
