--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@modules/maps": "file:./modules/maps/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/side-drawer": "file:./modules/side-drawer/",
+    "@modules/social-login": "file:./modules/social-login/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
