--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/side-drawer": "file:./modules/side-drawer/",
     "@modules/social-login": "file:./modules/social-login/",
+    "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -46,6 +47,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
+    "react-native-webview": "^11.17.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
