--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@modules/side-drawer": "file:./modules/side-drawer/",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
+    "@modules/user-profile": "file:./modules/user-profile/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
