--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/polyfill": "^7.12.1",
+    "@modules/faq": "file:./modules/faq",
     "@modules/image-gallery": "file:./modules/image-gallery/",
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
